--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -20,6 +20,7 @@
     padding-bottom: 20px;
     text-align: right;
     display: none;
+    z-index: 2;
 }
 
 .header__menu-box:hover .header__menu {
