--- a/scss/block/_shopping-cart.scss
+++ b/scss/block/_shopping-cart.scss
@@ -1,6 +1,11 @@
 .shopping-cart {
     display: flex;
     margin-top: 96px;
+
+    @include tablet {
+        display: block;
+        margin-top: 59px;
+    }
 }
 
 .shopping-cart__cart {
@@ -8,17 +13,34 @@
     width: 652px;
     margin-bottom: 40px;
     box-shadow: 15px 15px 15px 10px $footer-grey;
+
+    @include tablet {
+        width: 100%;
+    }
+
+    @include mobile {
+        height: 188px;
+    }
+
 }
 
 .shopping-cart__action {
     display: flex;
     justify-content: space-between;
     padding: 22px 22px 62px 21px;
-    width: 390px;
+    width: 100%;
+
+    @include mobile {
+        padding: 13px 17px 37px 12px;
+    }
 }
 
 .shopping-cart__action-description {
     width: 200px;
+
+    @include mobile {
+        width: 143px;
+    }
 }
 
 .shopping-cart__action-title {
@@ -26,16 +48,31 @@
     @include font(24px, 29px, 400);
     text-transform: uppercase;
     margin-bottom: 42px;
+
+    @include mobile {
+        @include font(14px, 16px, 400);
+        width: 143px;
+        margin-bottom: 25px;
+    }
 }
 
 .shopping-cart__action-text {
     font-family: Lato;
     @include font(22px, 26px, 400);
     margin-bottom: 6px;
+
+    @include mobile {
+        @include font(14px, 16px, 400);
+        margin-bottom: 4px;
+    }
 }
 
 .shopping-cart__text-price {
     color: $dark-pink;
+
+    @include mobile {
+        @include font(14px, 16px, 400);
+    }
 }
 
 .shopping-cart__action-quantity {
@@ -48,6 +85,20 @@
     font-family: Lato;
     @include font(18px, 22px, 400);
     border: solid 1px $footer-grey;
+
+    @include mobile {
+        @include font(14px, 16px, 400);
+        padding: 1px 9px;
+    }
+}
+
+.shopping-cart__button-img {
+
+    @include mobile {
+        width: 11px;
+        height: 11px;
+        margin-left: -5px;
+    }
 }
 
 .shopping-cart__action-button {
@@ -55,6 +106,10 @@
     fill: $light-black;
     background: none;
     border: none;
+
+    @include mobile {
+        margin-bottom: 159px;
+    }
 }
 
 .shopping-cart__action-button:hover {
@@ -67,12 +122,46 @@
 
 .shopping-cart__adress-container {
     margin: 17px 0 0 129px;
+
+    @include tablet {
+        margin: 0;
+    }
+}
+
+.shopping-cart__input-box {
+    width: 360px;
+}
+
+.shopping-cart__adress-box {
+
+    @include tablet {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    @include mobile {
+        display: block;
+        margin-bottom: 96px;
+    }
+}
+
+.shopping-cart__adress-box-inpyt {
+    width: 360px;
+
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .shopping-cart__img-button {
     display: flex;
     justify-content: space-between;
     margin: 32px 0 128px 0;
+
+    @include tablet {
+        justify-content: space-around;
+        margin-bottom: 64px;
+    }
 }
 
 .shopping-cart__button-stile {
@@ -82,6 +171,11 @@
     background: none;
     border: solid 1px $grai;
     margin-top: 32px;
+
+    @include mobile {
+        @include font (12px, 14px, 400);
+        padding: 8px 11px 9px 11px;
+    }
 }
 
 .shopping-cart__button-stile:hover {
@@ -106,6 +200,10 @@
     width: 324px;
     border: 1px solid $transparent-grey;
     color: $transparent-grey;
+
+    @include mobile {
+        width: 90%;
+    }
 }
 
 .shopping-cart__adress-form:hover {
@@ -134,7 +232,16 @@
 .shopping-cart__order {
     background-color: $color-grei;
     text-align: center;
+    width: 360px;
     padding: 39px 0 42px 0;
+
+    @include tablet {
+        height: 149px;
+    }
+
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .shopping-cart__order-box {
