--- a/scss/stile.scss
+++ b/scss/stile.scss
@@ -8,6 +8,8 @@
 
 @import './block/hero.scss';
 
+@import './block/page-header';
+
 @import './block/sale.scss';
 
 @import './block/product.scss';
@@ -19,3 +21,7 @@
 @import './block/registration.scss';
 
 @import './block/shopping-cart.scss';
+
+@import './block/page-product';
+
+@import './block/product-carousel'
