--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -46,10 +46,10 @@
 }
 
 .hero__title {
-font-family: Lato;
-@include font(48px, 58px, 900);
-text-transform: uppercase;
-
+    font-family: Lato;
+    @include font(48px, 58px, 900);
+    text-transform: uppercase;
+    
     @include tablet {
         @include font (44px, 53px, 900) 
     }
@@ -58,6 +58,36 @@ text-transform: uppercase;
         @include font (38px, 46px, 900);
         margin-top: 148px;
     }
+}
+
+.hero__focus-in-contract {
+	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+
+    @-webkit-keyframes hero__focus-in-contract {
+        0% {
+            -webkit-filter: blur(12px);
+            filter: blur(12px);
+            opacity: 0;
+        }
+        100% {
+            -webkit-filter: blur(0px);
+            filter: blur(0px);
+            opacity: 1;
+        }
+    }
+        @keyframes text-focus-in {
+        0% {
+            -webkit-filter: blur(12px);
+            filter: blur(12px);
+            opacity: 0;
+        }
+        100% {
+            -webkit-filter: blur(0px);
+            filter: blur(0px);
+            opacity: 1;
+        }
+    }      
 }
 
 .hero__subtitle {
