--- a/scss/block/_registration.scss
+++ b/scss/block/_registration.scss
@@ -70,6 +70,7 @@
 
 .registration-page__input-button:hover {
     opacity: 0.7;
+    transform: scale(1.1);
 }
 
 .registration-page__input-button:active {
